--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:wght@400;700&display=swap');
 @import 'colors';
-
 
 /** ============== global style ================ */
 *,
@@ -71,8 +71,25 @@ select {
 
 
 .container {
-    max-width: 1440px;
+    max-width: calc(1440px + 20%);
     width: 100%;
     margin: 0 auto;
-    padding: 0 1.5rem;
+    padding: 0 10%;
+}
+
+body {
+    font-size: 16px;
+    font-family: 'Karla',
+        sans-serif;
+    font-weight: 400;
+}
+
+.text-bold {
+    font-weight: 700;
+}
+
+.heading {
+    font-family: 'DM Serif Display',
+        serif;
+    font-weight: 400;
 }
